tests/poof/fixtures/errors/error4.cpp

struct foo {};

struct bar {};

struct baz {};

poof(
  d_union foo_bar_baz
          undefined_custom_enum_type
  {
    foo
    bar
    baz
  }
)
